plugins/platforms/drm/drm_backend.cpp
@@ -350,6 +350,10 @@ void DrmBackend::openDrm()
 
 void DrmBackend::addOutput(DrmOutput *o)
 {
+    if (!m_active) {
+        o->renderLoop()->inhibit();
+    }
+
     m_outputs.append(o);
     m_enabledOutputs.append(o);
     emit o->gpu()->outputEnabled(o);
